tests/ui/save-analysis/issue-68621.stderr
error: unconstrained opaque type
  --> $DIR/issue-68621.rs:14:19
   |
LL |     type Future = impl Trait;
   |                   ^^^^^^^^^^
   |
   = note: `Future` must be used in combination with a concrete type within the same impl

error: aborting due to previous error

